Actualización en index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Domisalud JAC - Servicios Médicos a Domicilio</title>
   <meta name="description" content="Domisalud JAC ofrece servicios médicos a domicilio, incluyendo enfermería, terapia respiratoria, ocupacional, fonoaudiología, curaciones, lavado de oído, medicina general, sueros vitaminados y más.">
-  <meta name="keywords" content="servicios médicos, enfermería, terapia respiratoria, medicina general, sueros vitaminados">
+  <meta name="keywords" content="servicios médicos, enfermería, terapia respiratoria, medicina general, sueros vitaminizado">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
