Descripción de los cambios realizados

--- a/index.html
+++ b/index.html
@@ -3,32 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
+    <title>Domisalud JAC - Servicios Médicos a Domicilio</title>
+    <meta name="description" content="Domisalud JAC ofrece servicios médicos a domicilio, incluyendo enfermería, terapia respiratoria, ocupacional, fonoaudiología, curaciones, lavado de oído, medicina general, sueros vitaminizados y más.">
+    <meta name="keywords" content="servicios médicos, enfermería, terapia respiratoria, medicina general, sueros vitaminizado">
     <link rel="stylesheet" href="path/to/your/styles.css"> <!-- Actualiza con tu ruta de CSS -->
+</head>
 
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Domisalud JAC - Servicios Médicos a Domicilio</title>
-  <meta name="description" content="Domisalud JAC ofrece servicios médicos a domicilio, incluyendo enfermería, terapia respiratoria, ocupacional, fonoaudiología, curaciones, lavado de oído, medicina general, sueros vitaminados y más.">
-  <meta name="keywords" content="servicios médicos, enfermería, terapia respiratoria, medicina general, sueros vitaminizado">
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Domisalud JAC - Servicios Médicos a Domicilio</title>
+    <meta name="description" content="Domisalud JAC ofrece servicios médicos a domicilio, incluyendo enfermería, terapia respiratoria, ocupacional, fonoaudiología, curaciones, lavado de oído, medicina general, sueros vitaminizados y más.">
+    <meta name="keywords" content="servicios médicos, enfermería, terapia respiratoria, medicina general, sueros vitaminizado">
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <!-- Favicons -->
+    <link href="assets/img/favicon.png" rel="icon" type="image/png">
+    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com" rel="preconnect">
-  <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
-   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-
-
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+</head>
 
   <!-- WhatsApp Floating Icon -->
 <a href="https://wa.me/573103112416" class="whatsapp-float" target="_blank">
@@ -128,40 +133,39 @@
   </div>
 </section><!-- End Hero Section -->
 
-        <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
-          <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon-box">
-              <i class="bi bi-clipboard-pulse"></i>
-              <h3><a href="#services">Enfermería</a></h3>
-            </div>
-          </div>
-          <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
-            <div class="icon-box">
-              <i class="bi bi-breath"></i>
-              <h3><a href="#services">Terapia Respiratoria</a></h3>
-            </div>
-          </div>
-          <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon-box">
-              <i class="bi bi-headset"></i>
-              <h3><a href="#services">Fonoaudiología</a></h3>
-            </div>
-          </div>
-          <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="600">
-            <div class="icon-box">
-              <i class="bi bi-heart-pulse"></i>
-              <h3><a href="#services">Medicina General</a></h3>
-            </div>
-          </div>
-          <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="700">
-            <div class="icon-box">
-              <i class="bi bi-droplet-half"></i>
-              <h3><a href="#services">Sueros Vitaminados</a></h3>
-            </div>
-          </div>
+       <div class="row gy-4 mt-5 justify-content-center" data-aos="fade-up" data-aos-delay="200">
+    <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="300">
+        <div class="icon-box">
+            <i class="bi bi-clipboard-pulse"></i>
+            <h3><a href="#services">Enfermería</a></h3>
         </div>
+    </div>
+    <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="400">
+        <div class="icon-box">
+            <i class="bi bi-cloud"></i><!-- Ícono alternativo para Terapia Respiratoria -->
+            <h3><a href="#services">Terapia Respiratoria</a></h3>
+        </div>
+    </div>
+    <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="500">
+        <div class="icon-box">
+            <i class="bi bi-headset"></i>
+            <h3><a href="#services">Fonoaudiología</a></h3>
+        </div>
+    </div>
+    <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="600">
+        <div class="icon-box">
+            <i class="bi bi-heart-pulse"></i>
+            <h3><a href="#services">Medicina General</a></h3>
+        </div>
+    </div>
+    <div class="col-xl-2 col-md-4" data-aos="fade-up" data-aos-delay="700">
+        <div class="icon-box">
+            <i class="bi bi-droplet-half"></i>
+            <h3><a href="#services">Sueros Vitaminizado</a></h3>
+        </div>
+    </div>
+</div>
 
-      </div>
 
     </section><!-- /Hero Section -->
 
@@ -252,7 +256,7 @@
   <!-- Services Section -->
 <section id="services" class="services section">
 
- <!-- Section Title -->
+<!-- Section Title -->
 <div class="container section-title" data-aos="fade-up">
   <h2>Nuestros Servicios</h2>
   <p>Conoce más sobre los servicios que ofrecemos</p>
@@ -277,6 +281,8 @@
           <li>Administración de medicamentos.</li>
           <li>Curaciones de heridas.</li>
           <li>Control de glucosa.</li>
+          <li>Enemas rectales.</li>
+          <li>Manejo de sondas vesicales.</li>
         </ul>
       </div>
     </div><!-- End Service Item -->
@@ -357,11 +363,169 @@
       </div>
     </div><!-- End Service Item -->
 
-  </div>
+    <!-- Servicio de Psicología -->
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="bi bi-brain"></i>
+        </div>
+        <a href="service-details.html" class="stretched-link">
+          <h3>Psicología</h3>
+        </a>
+        <p>Orientación y tratamiento psicológico personalizado.</p>
+        <ul>
+          <li>Evaluación psicológica.</li>
+          <li>Terapias individuales y grupales.</li>
+          <li>Intervenciones en crisis.</li>
+        </ul>
+      </div>
+    </div><!-- End Service Item -->
 
-</div>
+    <!-- Servicio de Lavado de Oído -->
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="bi bi-ear"></i>
+        </div>
+        <a href="service-details.html" class="stretched-link">
+          <h3>Lavado de Oído</h3>
+        </a>
+        <p>Tratamiento para eliminar obstrucciones y mejorar la audición.</p>
+        <ul>
+          <li>Eliminación de cerumen acumulado.</li>
+          <li>Tratamiento para infecciones del oído.</li>
+        </ul>
+      </div>
+    </div><!-- End Service Item -->
 
-</section><!-- /Services Section -->
+    <!-- Servicio de Lavado de Ojos -->
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="800">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="bi bi-eye"></i>
+        </div>
+        <a href="service-details.html" class="stretched-link">
+          <h3>Lavado de Ojos</h3>
+        </a>
+        <p>Procedimientos para el cuidado y limpieza ocular.</p>
+        <ul>
+          <li>Tratamiento de irritaciones oculares.</li>
+          <li>Eliminación de cuerpos extraños.</li>
+        </ul>
+      </div>
+    </div><!-- End Service Item -->
+
+    <!-- Servicio de Terapias de Salud Ocupacional -->
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="900">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="bi bi-briefcase"></i>
+        </div>
+        <a href="service-details.html" class="stretched-link">
+          <h3>Terapias de Salud Ocupacional</h3>
+        </a>
+        <p>Atención especializada para población especial en el ámbito laboral.</p>
+        <ul>
+          <li>Terapias ergonómicas.</li>
+          <li>Evaluaciones y adaptación de puestos de trabajo.</li>
+          <li>Programas de prevención de lesiones.</li>
+        </ul>
+      </div>
+    </div><!-- End Service Item -->
+
+    <!-- Servicio de Clínica de Heridas -->
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="1000">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="bi bi-bandage"></i>
+        </div>
+        <a href="service-details.html" class="stretched-link">
+          <h3>Clínica de Heridas</h3>
+        </a>
+        <p>Cuidado especializado para heridas crónicas y complicadas.</p>
+        <ul>
+          <li>Tratamiento de heridas diabéticas.</li>
+          <li>Atención de úlceras por presión.</li>
+          <li>Cuidado postquirúrgico de heridas.</li>
+        </ul>
+      </div>
+    </div><!-- End Service Item -->
+
+    <!-- Servicio de Llamadas Telefónicas con Orientación Médica -->
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="1100">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="bi bi-phone"></i>
+        </div>
+        <a href="service-details.html" class="stretched-link">
+          <h3>Llamadas Telefónicas con Orientación Médica</h3>
+        </a>
+        <p>Consulta y asesoría médica a través de llamadas telefónicas.</p>
+        <ul>
+          <li>Orientación sobre síntomas y cuidados.</li>
+          <li>Consejos para el manejo de enfermedades.</li>
+        </ul>
+      </div>
+    </div><!-- End Service Item -->
+
+    <!-- Servicio de Telemedicina -->
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="1200">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="bi bi-camera-video"></i>
+        </div>
+        <a href="service-details.html" class="stretched-link">
+          <h3>Telemedicina</h3>
+        </a>
+        <p>Consultas médicas a través de videollamadas.</p>
+        <ul>
+          <li>Consulta médica remota.</li>
+          <li>Evaluaciones a distancia.</li>
+          <li>Asesoramiento y seguimiento.</li>
+        </ul>
+      </div>
+    </div><!-- End Service Item -->
+
+    <!-- Servicio de Suturas de Heridas -->
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="1300">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="bi bi-scissors"></i>
+        </div>
+        <a href="service-details.html" class="stretched-link">
+          <h3>Suturas de Heridas</h3>
+        </a>
+        <p>Tratamiento para heridas que requieren sutura.</p>
+        <ul>
+          <li>Realización de suturas.</li>
+          <li>Cuidado postoperatorio.</li>
+        </ul>
+      </div>
+    </div><!-- End Service Item -->
+
+    <!-- Servicio de Lectura de Exámenes -->
+    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="1400">
+      <div class="service-item position-relative">
+        <div class="icon">
+          <i class="bi bi-file-earmark-text"></i>
+        </div>
+        <a href="service-details.html" class="stretched-link">
+          <h3>Lectura de Exámenes</h3>
+        </a>
+        <p>Interpretación de resultados de exámenes médicos.</p>
+        <ul>
+          <li>Análisis de resultados de laboratorio.</li>
+          <li>Evaluación de estudios diagnósticos.</li>
+        </ul>
+      </div>
+    </div><!-- End Service Item -->
+
+  </div><!-- End Row -->
+
+</div><!-- End Container -->
+
+</section><!-- End Services Section -->
+
 
 <!-- Call To Action Section -->
 <section id="call-to-action" class="call-to-action section dark-background">
