--- a/service-details.html
+++ b/service-details.html
@@ -83,6 +83,7 @@
       </nav>
     </div><!-- End Page Title -->
 
+HEAD
     <!-- Image Carousel Section -->
     <section class="image-carousel">
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -132,6 +133,58 @@
         </button>
       </div>
     </section><!-- End Image Carousel Section -->
+=======
+   <!-- Image Carousel Section -->
+<section class="image-carousel">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="5" aria-label="Slide 6"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/img/pic06.jpg" class="d-block w-100" alt="Servicio 1">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/pic07.jpg" class="d-block w-100" alt="Servicio 2">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/pic08.jpg" class="d-block w-100" alt="Servicio 3">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/pic10.jpg" class="d-block w-100" alt="Servicio 4">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/pic12.jpg" class="d-block w-100" alt="Servicio 5">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/pic13.jpg" class="d-block w-100" alt="Servicio 6">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/pic14.jpg" class="d-block w-100" alt="Servicio 7">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/pic15.jpg" class="d-block w-100" alt="Servicio 8">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+</section><!-- End Image Carousel Section -->
+
+ 3269d085b88212d81e64efa003184195b013fce7
 
     <!-- Service Details Section -->
     <section id="service-details" class="service-details section">
@@ -151,6 +204,7 @@
                 <a href="#curaciones"><i class="bi bi-arrow-right-circle"></i><span>Curaciones</span></a>
                 <a href="#lavado-oido"><i class="bi bi-arrow-right-circle"></i><span>Lavado de Oído</span></a>
                 <a href="#sueros-vitaminados"><i class="bi bi-arrow-right-circle"></i><span>Sueros Vitaminados</span></a>
+ HEAD
                 <a href="#enemas-rectales"><i class="bi bi-arrow-right-circle"></i><span>Enemas Rectales</span></a>
                 <a href="#sondas-vesicales"><i class="bi bi-arrow-right-circle"></i><span>Manejo de Sondas Vesicales</span></a>
                 <a href="#psicologia"><i class="bi bi-arrow-right-circle"></i><span>Psicología</span></a>
@@ -269,11 +323,55 @@
               <p>Interpretación de resultados de exámenes médicos para proporcionar un diagnóstico preciso.</p>
             </div>
 
+              </div>
+            </div><!-- End Services List -->
+
+            <div class="service-box">
+              <h4>Descargar Catálogo</h4>
+              <div class="download-catalog">
+                <a href="#"><i class="bi bi-filetype-pdf"></i><span>Catálogo PDF</span></a>
+                <a href="#"><i class="bi bi-file-earmark-word"></i><span>Catálogo DOC</span></a>
+              </div>
+            </div><!-- End Services List -->
+
+            <div class="help-box d-flex flex-column justify-content-center align-items-center">
+              <i class="bi bi-headset help-icon"></i>
+              <h4>¿Tienes Preguntas?</h4>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>3103112416 / 3027125931</span></p>
+              <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contacto@domisaludjac.com">contacto@domisaludjac.com</a></p>
+            </div>
+
+          </div>
+
+          <div class="col-lg-8 ps-lg-5" data-aos="fade-up" data-aos-delay="200">
+            <h3 id="medicina-general">Medicina General</h3>
+            <p>La medicina general proporciona atención médica integral y continua a pacientes con una variedad de afecciones. Nuestros médicos generales están capacitados para diagnosticar y tratar una amplia gama de problemas de salud, coordinar cuidados con especialistas según sea necesario, y ofrecer orientación sobre prevención y manejo de enfermedades crónicas.</p>
+
+            <h3 id="terapia-respiratoria">Terapia Respiratoria</h3>
+            <p>Nuestro servicio de terapia respiratoria está diseñado para ayudar a los pacientes a mejorar su función respiratoria y manejar afecciones respiratorias como el asma, la EPOC y la fibrosis quística. Los terapeutas respiratorios realizan evaluaciones, proporcionan tratamientos como la administración de oxígeno y la terapia con nebulizadores, y educan a los pacientes sobre técnicas de respiración y manejo de su condición.</p>
+
+            <h3 id="enfermeria">Enfermería</h3>
+            <p>Ofrecemos servicios de enfermería a domicilio que incluyen administración de medicamentos, cuidado de heridas, monitoreo de signos vitales y apoyo en el manejo de enfermedades crónicas. Nuestro equipo de enfermeras altamente cualificadas se asegura de brindar cuidados de alta calidad y apoyo personalizado a cada paciente.</p>
+
+            <h3 id="fonoaudiologia">Fonoaudiología</h3>
+            <p>Nuestros servicios de fonoaudiología incluyen la evaluación y tratamiento de trastornos del habla, el lenguaje y la comunicación. Los fonoaudiólogos trabajan con pacientes de todas las edades para mejorar sus habilidades comunicativas y ayudarles a superar dificultades relacionadas con el habla y el lenguaje.</p>
+
+            <h3 id="curaciones">Curaciones</h3>
+            <p>Realizamos curaciones y cuidados de heridas a domicilio, asegurando una correcta limpieza, desinfección y tratamiento de las mismas. Este servicio es ideal para pacientes que necesitan atención especializada en el manejo de heridas postoperatorias o lesiones crónicas.</p>
+
+            <h3 id="lavado-oido">Lavado de Oído</h3>
+            <p>El servicio de lavado de oído está diseñado para eliminar la acumulación de cerumen y otros obstrucciones en los oídos. Utilizamos técnicas seguras y efectivas para mejorar la audición y prevenir infecciones del oído.</p>
+
+            <h3 id="sueros-vitaminados">Sueros Vitaminados</h3>
+            <p>Los sueros vitaminados a domicilio proporcionan una infusión de vitaminas, minerales y otros nutrientes diseñados para fortalecer el sistema inmunológico, aumentar los niveles de energía y acelerar la recuperación de enfermedades. Los tratamientos son administrados por profesionales cualificados para garantizar la máxima efectividad y seguridad.</p>
+ 3269d085b88212d81e64efa003184195b013fce7
+
           </div>
 
         </div>
 
       </div>
+ HEAD
     </section><!-- End Service Details Section -->
 
   </main><!-- End #main -->
@@ -308,6 +406,101 @@
       </div>
     </div>
   </footer><!-- End Footer -->
+
+
+    </section><!-- End Service Details Section -->
+
+  </main>
+
+  <footer id="footer" class="footer dark-background">
+
+    <div class="footer-top">
+      <div class="container">
+        <div class="row gy-4">
+          <div class="col-lg-4 col-md-6 footer-about">
+            <a href="index.html" class="logo d-flex align-items-center">
+              <span class="sitename">Domisalud JAC</span>
+            </a>
+            <div class="footer-contact pt-3">
+              <p>Kra 78K N 40-22 Sur</p>
+              <p>+1 3103112416 / +1 3027125931</p>
+              <p class="mt-3"><strong>Teléfono:</strong> <span>3103112416 / 3027125931</span></p>
+              <p><strong>Email:</strong> <span><a href="mailto:contacto@domisaludjac.com">contacto@domisaludjac.com</a></span></p>
+            </div>
+            <div class="social-links d-flex mt-4">
+              <a href=""><i class="bi bi-twitter"></i></a>
+              <a href=""><i class="bi bi-facebook"></i></a>
+              <a href=""><i class="bi bi-instagram"></i></a>
+
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-3 footer-links">
+            <h4>Enlaces Útiles</h4>
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <a href="index.html">Inicio</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index.html#about">Nosotros</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index.html#services">Servicios</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Términos de Servicio</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Política de Privacidad</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-2 col-md-3 footer-links">
+            <h4>Nuestros Servicios</h4>
+            <ul>
+              <li><i class="bi bi-chevron-right"></i> <a href="#medicina-general">Medicina General</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#terapia-respiratoria">Terapia Respiratoria</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#enfermeria">Enfermería</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#fonoaudiologia">Fonoaudiología</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#curaciones">Curaciones</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#lavado-oido">Lavado de Oído</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#sueros-vitaminados">Sueros Vitaminados</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-4 col-md-12 footer-newsletter">
+            <h4>Suscríbete a Nuestro Boletín</h4>
+            <p>Suscríbete a nuestro boletín y recibe las últimas noticias sobre nuestros productos y servicios.</p>
+            <form action="forms/newsletter.php" method="post" class="php-email-form">
+              <div class="newsletter-form"><input type="email" name="email"><input type="submit" value="Suscribirse"></div>
+              <div class="loading">Cargando</div>
+              <div class="error-message"></div>
+              <div class="sent-message">¡Tu solicitud de suscripción ha sido enviada. ¡Gracias!</div>
+            </form>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="copyright">
+      <div class="container text-center">
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Domisalud JAC</strong> <span>Todos los Derechos Reservados</span></p>
+        <div class="credits">
+          Diseñado por <a href="https://Jorgue gonzalez/">CREATI.COM</a>
+        </div>
+      </div>
+    </div>
+
+  </footer>
+
+
+<!-- Footer -->
+<footer class="footer-social">
+  <div class="container text-center">
+    <a href="https://www.facebook.com/tu_perfil" target="_blank" class="social-icon">
+      <i class="bi bi-facebook"></i>
+    </a>
+    <a href="https://www.instagram.com/tu_perfil" target="_blank" class="social-icon">
+      <i class="bi bi-instagram"></i>
+    </a>
+    <a href="https://wa.me/573103112416" target="_blank" class="social-icon">
+      <i class="bi bi-whatsapp"></i>
+    </a>
+  </div>
+</footer>
+ 3269d085b88212d81e64efa003184195b013fce7
 
 <style>
   .footer-social {
