--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
           <i class="bi bi-droplet-half"></i>
         </div>
         <a href="service-details.html" class="stretched-link">
-          <h3>Sueros Vitaminados</h3>
+          <h3>Sueros Vitaminizado</h3>
         </a>
         <p>Terapias de suero para mejorar tu bienestar y energía.</p>
         <ul>
