--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
       </div>
     </div><!-- End Service Item -->
 
-    <!-- Servicio de Sueros Vitaminados -->
+    <!-- Servicio de Sueros Vitaminizado -->
     <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
       <div class="service-item position-relative">
         <div class="icon">
@@ -377,23 +377,6 @@
           <li>Evaluación psicológica.</li>
           <li>Terapias individuales y grupales.</li>
           <li>Intervenciones en crisis.</li>
-        </ul>
-      </div>
-    </div><!-- End Service Item -->
-
-    <!-- Servicio de Lavado de Oído -->
-    <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="700">
-      <div class="service-item position-relative">
-        <div class="icon">
-          <i class="bi bi-ear"></i>
-        </div>
-        <a href="service-details.html" class="stretched-link">
-          <h3>Lavado de Oído</h3>
-        </a>
-        <p>Tratamiento para eliminar obstrucciones y mejorar la audición.</p>
-        <ul>
-          <li>Eliminación de cerumen acumulado.</li>
-          <li>Tratamiento para infecciones del oído.</li>
         </ul>
       </div>
     </div><!-- End Service Item -->
