Added favicon and updated index and service-details pages

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <meta name="keywords" content="servicios médicos, enfermería, terapia respiratoria, medicina general, sueros vitaminizado">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon" type="image/png">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/domisalud logo.png" rel="icon" type="image/png">
+    <link href="assets/img/domisalud logo.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -36,7 +36,7 @@
 </head>
 
   <!-- WhatsApp Floating Icon -->
-<a href="https://wa.me/573103112416" class="whatsapp-float" target="_blank">
+<a href="https://wa.me/573242181960" class="whatsapp-float" target="_blank">
   <i class="bi bi-whatsapp"></i>
 </a>
 
@@ -710,7 +710,7 @@
           <i class="bi bi-phone flex-shrink-0"></i>
           <div>
             <h4>Teléfono:</h4>
-            <p>3103112416 / 3027125931</p>
+            <p>3242181960 / 3027125931</p>
           </div>
         </div>
       </div><!-- Fin de Info Item -->
@@ -831,7 +831,7 @@ $(document).ready(function() {
         <h4>Contáctanos</h4>
         <p>
           Kra 78K N 40-22 Sur <br>
-          <strong>Teléfono:</strong> 3103112416 / 3027125931<br>
+          <strong>Teléfono:</strong> 3242181960 / 3027125931<br>
           <strong>Email:</strong> gerencia.domisalud@gmail.com<br>
         </p>
       </div>
@@ -841,17 +841,16 @@ $(document).ready(function() {
   </div>
 
 </footer><!-- /Footer -->
-
 <!-- Footer -->
 <footer class="footer-social">
   <div class="container text-center">
-    <a href="https://www.facebook.com/tu_perfil" target="_blank" class="social-icon">
+    <a href="https://www.facebook.com/Domisalud-CapsaludSAS" target="_blank" class="social-icon">
       <i class="bi bi-facebook"></i>
     </a>
-    <a href="https://www.instagram.com/tu_perfil" target="_blank" class="social-icon">
+    <a href="https://www.instagram.com/capsaludsas" target="_blank" class="social-icon">
       <i class="bi bi-instagram"></i>
     </a>
-    <a href="https://wa.me/573103112416" target="_blank" class="social-icon">
+    <a href="https://wa.me/573242181960" target="_blank" class="social-icon">
       <i class="bi bi-whatsapp"></i>
     </a>
   </div>
