--- a/service-details.html
+++ b/service-details.html
@@ -152,7 +152,7 @@ HEAD
                 <a href="#fonoaudiologia"><i class="bi bi-arrow-right-circle"></i><span>Fonoaudiología</span></a>
                 <a href="#curaciones"><i class="bi bi-arrow-right-circle"></i><span>Curaciones</span></a>
                 <a href="#lavado-oido"><i class="bi bi-arrow-right-circle"></i><span>Lavado de Oído</span></a>
-                <a href="#sueros-vitaminados"><i class="bi bi-arrow-right-circle"></i><span>Sueros Vitaminados</span></a>
+                <a href="#sueros-vitaminados"><i class="bi bi-arrow-right-circle"></i><span>Sueros Vitaminizado</span></a>
  HEAD
                 <a href="#enemas-rectales"><i class="bi bi-arrow-right-circle"></i><span>Enemas Rectales</span></a>
                 <a href="#sondas-vesicales"><i class="bi bi-arrow-right-circle"></i><span>Manejo de Sondas Vesicales</span></a>
@@ -200,11 +200,6 @@ HEAD
               <p>Atención especializada para el manejo y tratamiento de heridas.</p>
             </div>
 
-            <!-- Lavado de Oído -->
-            <div id="lavado-oido" class="service-detail">
-              <h3>Lavado de Oído</h3>
-              <p>Procedimiento para limpiar y desobstruir los oídos de forma segura y eficaz.</p>
-            </div>
 
             <!-- Sueros Vitaminados -->
             <div id="sueros-vitaminados" class="service-detail">
@@ -286,7 +281,7 @@ HEAD
             <div class="help-box d-flex flex-column justify-content-center align-items-center">
               <i class="bi bi-headset help-icon"></i>
               <h4>¿Tienes Preguntas?</h4>
-              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span>3103112416 / 3027125931</span></p>
+              <p class="d-flex align-items-center mt-2 mb-0"><i class="bi bi-telephone me-2"></i> <span> 3242181960 / 3027125931</span></p>
               <p class="d-flex align-items-center mt-1 mb-0"><i class="bi bi-envelope me-2"></i> <a href="mailto:contacto@domisaludjac.com">contacto@domisaludjac.com</a></p>
             </div>
 
@@ -302,7 +297,7 @@ HEAD
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-info">
           <h3>Domisalud JAC</h3>
-          <p>Brindamos atención médica integral con un enfoque en la calidad y el cuidado personalizado. Visítanos en Kra 78K N 40-22 Sur o llámanos a 3103112416 / 3027125931.</p>
+          <p>Brindamos atención médica integral con un enfoque en la calidad y el cuidado personalizado. Visítanos en Kra 78K N 40-22 Sur o llámanos a 3242181960 / 3027125931.</p>
         </div>
 
         <div class="col-lg-4 col-md-6 footer-links">
@@ -319,8 +314,8 @@ HEAD
           <h4>Contacto</h4>
           <p>
             Kra 78K N 40-22 Sur<br>
-            <strong>Teléfono:</strong> 3103112416 / 3027125931<br>
-            <strong>Email:</strong> info@domisaludjac.com<br>
+            <strong>Teléfono:</strong> 3242181960 / 3027125931<br>
+            <strong>Email:</strong> gerencia.domisalud@gmail.com<br>
           </p>
         </div>
       </div>
@@ -343,9 +338,9 @@ HEAD
             </a>
             <div class="footer-contact pt-3">
               <p>Kra 78K N 40-22 Sur</p>
-              <p>+1 3103112416 / +1 3027125931</p>
-              <p class="mt-3"><strong>Teléfono:</strong> <span>3103112416 / 3027125931</span></p>
-              <p><strong>Email:</strong> <span><a href="mailto:contacto@domisaludjac.com">contacto@domisaludjac.com</a></span></p>
+              <p>573242181960 / 573027125931</p>
+              <p class="mt-3"><strong>Teléfono:</strong> <span>3242181960 / 3027125931</span></p>
+              <p><strong>Email:</strong> <span><a href="gerencia.domisalud@gmail.com">contacto@domisaludjac.com</a></span></p>
             </div>
             <div class="social-links d-flex mt-4">
               <a href=""><i class="bi bi-twitter"></i></a>
@@ -415,12 +410,12 @@ HEAD
     <a href="https://www.instagram.com/tu_perfil" target="_blank" class="social-icon">
       <i class="bi bi-instagram"></i>
     </a>
-    <a href="https://wa.me/573103112416" target="_blank" class="social-icon">
+    <a href="https://wa.me/573242181960" target="_blank" class="social-icon">
       <i class="bi bi-whatsapp"></i>
     </a>
   </div>
 </footer>
- 3269d085b88212d81e64efa003184195b013fce7
+
 
 <style>
   .footer-social {
