--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
 
   <main class="main">
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16672615566">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16672615566');
+</script>
+
     <!-- Hero Section -->
 <section id="hero" class="hero section dark-background">
 
