--- a/index.html
+++ b/index.html
@@ -128,6 +128,16 @@
   gtag('config', 'AW-16672615566');
 </script>
 
+    <!-- Event snippet for Page view conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-16672615566/lj_BCNPU08oZEI7Zj44-',
+      'value': 1.0,
+      'currency': 'COP'
+  });
+</script>
+
+
     <!-- Hero Section -->
 <section id="hero" class="hero section dark-background">
 
